--- a/package.json
+++ b/package.json
@@ -33,10 +33,12 @@
   "devDependencies": {
     "@csstools/postcss-global-data": "^2.1.1",
     "@types/cookie": "^0.6.0",
+    "@types/eslint": "^9.6.1",
     "@types/node": "^20.17.30",
     "@types/react": "^18.3.20",
     "@types/react-dom": "^18.3.6",
     "eslint": "^9.25.0",
+    "eslint-config-next": "^15.3.3",
     "postcss-custom-media": "^10.0.8",
     "postcss-flexbugs-fixes": "^5.0.2",
     "typescript": "^5.8.3"
